@@ -92,8 +92,8 @@ room {
           // user kneeling?
           if (user.position() == POS_KNEEL) {
             // messages
-            user.print("You feel a warmth spread across your body.\n");
-            user.rprint(user, " glows faintly, then returns to normal.\n");
+            user << "You feel a warmth spread across your body.\n";
+            user.room() << @ignore(user) << " glows faintly, then returns to normal.\n";
             // heal player
             var amount = user.getMaxhp() - user.getHp();
             user.heal(amount);
@@ -392,7 +392,7 @@ room {
       action {
         id = "touch"
         script = <<[
-          user.print("Dear ", user.getName(), ",\n  Look, do you even know what this river is?  Don't touch it, alright?\n  -- The Management\n");
+          user << "Dear " << @name(user, EN_NONE, false) << ",\n  Look, do you even know what this river is?  Don't touch it, alright?\n  -- The Management\n";
           return 0;
         ]>>
       }
