@@ -1,3 +1,10 @@
+2006-07-16 12:49:25  Sean Middleditch <elanthis@awesomeplay.com>
+
+  * Replace all uses of print and printf methods in scripts with
+    streams.
+  * Added @ignore stream.
+  * Added documentation for streamops.
+
 2006-07-15 13:50:38  Sean Middleditch <elanthis@awesomeplay.com>
 
   * Added @indent stream operator.
